--- a/ngx-amrs-auth/src/index.html
+++ b/ngx-amrs-auth/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Spaauth</title>
+  <title>NgxAmrsAuth</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
